fix: update api to support deployment in region without httpApi

--- a/cloudformation/api.yaml
+++ b/cloudformation/api.yaml
@@ -9,30 +9,54 @@ Parameters:
     Type: String
   CertArn:
     Type: String
+  Domain:
+    Type: String
+  HostedZoneId:
+    Type: String
 
 Resources:
+  ApiCWLRoleArn:
+    Type: AWS::ApiGateway::Account
+    Properties: 
+      CloudWatchRoleArn: !GetAtt CloudWatchRole.Arn
+  
+  # IAM Role for API Gateway + CloudWatch Logging
+  CloudWatchRole:
+      Type: AWS::IAM::Role
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            Action: 'sts:AssumeRole'
+            Effect: Allow
+            Principal:
+              Service: apigateway.amazonaws.com
+        Path: /
+        ManagedPolicyArns:
+          - 'arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs'
+  
   AccessLogs:
     Type: AWS::Logs::LogGroup
 
-  HttpApi:
-    Type: AWS::Serverless::HttpApi
+  Api:
+    Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
-      AccessLogSettings:
+      AccessLogSetting:
         DestinationArn: !GetAtt AccessLogs.Arn
-        Format: $context.requestId
-      DefaultRouteSettings:
-        ThrottlingBurstLimit: 1
-        ThrottlingRateLimit: 1
-      RouteSettings:
-        "GET /discord-bot/start": {}
-        "GET /discord-bot/stop": {}
-      StageVariables:
-        StageVar: Value
+        Format: '{"requestTime":"$context.requestTime","requestId":"$context.requestId","httpMethod":"$context.httpMethod","path":"$context.path","resourcePath":"$context.resourcePath","status":$context.status,"responseLatency":$context.responseLatency}'
+      MethodSettings:
+        - HttpMethod: "*"
+          ResourcePath: "/*"
+          ThrottlingBurstLimit: 1
+          ThrottlingRateLimit: 1
       FailOnWarnings: True
       Domain:
-        DomainName: api.dammers.dev
+        DomainName: !Sub "api.${Domain}"
+        EndpointConfiguration: REGIONAL
         CertificateArn: !Ref CertArn
+        Route53:
+          HostedZoneId: !Ref HostedZoneId
 
   Function:
     Type: AWS::Serverless::Function
@@ -40,8 +64,8 @@ Resources:
       Description: ECS Discord Bot start/stop
       Handler: api.lambda_handler
       MemorySize: 128
-      Runtime: python3.7
-      Timeout: 120
+      Runtime: python3.12
+      Timeout: 15
       CodeUri: ../handler.zip
       Environment:
         Variables:
@@ -55,29 +79,26 @@ Resources:
             Schedule: 'cron(0 15 * * ? *)'
             Enabled: True
         StartService: # warning: creates a public endpoint
-          Type: HttpApi
+          Type: Api
           Properties:
-            ApiId: !Ref HttpApi
+            RestApiId: !Ref Api
             Method: GET
             Path: /discord-bot/start
             TimeoutInMillis: 15000
-            PayloadFormatVersion: "2.0"
         StopService: # warning: creates a public endpoint
-          Type: HttpApi
+          Type: Api
           Properties:
-            ApiId: !Ref HttpApi
+            RestApiId: !Ref Api
             Method: GET
             Path: /discord-bot/stop
             TimeoutInMillis: 15000
-            PayloadFormatVersion: "2.0"
-        StopService: # warning: creates a public endpoint
-          Type: HttpApi
+        RestartService: # warning: creates a public endpoint
+          Type: Api
           Properties:
-            ApiId: !Ref HttpApi
+            RestApiId: !Ref Api
             Method: GET
             Path: /discord-bot/restart
             TimeoutInMillis: 15000
-            PayloadFormatVersion: "2.0"
       Role: !GetAtt Role.Arn
 
   Role:
